tests/invalid/wait_outside_coroutine.prsm
component BadComponent : MonoBehaviour {
    func doStuff() {
        wait 1.0s
    }
}
